# Valdi

./: README.md  ROADMAP.md
apps/managed_context_example/: BUILD.bazel  ManagedContextExample.tsx
apps/managed_context_example/test/: ManagedContextExampleApiCompat.spec.ts
bzl/valdi/: BUILD.bazel
compiler/companion/src/sqlite_bindings/: better_sqlite3_linux_x86_64.node
compiler/compiler/Compiler/Sources/: ValdiCompilerRunner.swift
docs/: README.md
docs/docs/: faq.md  workflow-bazel.md
snap_drawing/src/snap_drawing/cpp/Utils/: SkCodecAnimatedImage.cpp
src/valdi_modules/src/valdi/valdi_core/src/: JSXBootstrap.ts  NativeReferences.ts  Renderer.ts  ValdiRuntime.d.ts
src/valdi_modules/src/valdi/valdi_rxjs/src/: index.ts
src/valdi_modules/src/valdi/valdi_test/test/: Renderer.spec.ts
src/valdi_modules/src/valdi/valdi_tsx/src/: NativeTemplateElements.d.ts
valdi/src/java/com/snap/valdi/: ValdiTweaks.kt
valdi/src/java/com/snap/valdi/attributes/impl/gestures/: DoubleTapContext.kt  DragContext.kt  GestureAttributes.kt  LongPressContext.kt  PinchContext.kt  PredicateUtils.kt  RotateContext.kt  TapContext.kt
valdi/src/java/com/snap/valdi/views/: ValdiRootView.kt
valdi/src/java/com/snap/valdi/views/touches/: PinchGestureDetector.kt  PinchGestureRecognizerV2.kt  RotateGestureRecognizerV2.kt  RotationGestureDetector.kt
valdi/src/valdi/ios/Gestures/: SCValdiGestureRecognizers.mm
valdi/src/valdi/runtime/: ValdiRuntimeTweaks.cpp  ValdiRuntimeTweaks.hpp
valdi/src/valdi/runtime/Attributes/: DefaultAttributes.cpp  DefaultAttributes.hpp  ScrollAnchorAttributes.cpp  ScrollAnchorAttributes.hpp  ScrollAttributes.cpp
valdi/src/valdi/runtime/Context/: ScrollAnchorPosition.hpp  ViewNode.cpp  ViewNode.hpp  ViewNodeScrollState.cpp  ViewNodeScrollState.hpp
valdi/src/valdi/runtime/Interfaces/: ITweakValueProvider.hpp
valdi/src/valdi/runtime/JavaScript/: JavaScriptRuntime.cpp  ValueFunctionWithJSValue.cpp
valdi/src/valdi/standalone_desktop/: NativeModules.m
valdi/src/valdi/standalone_runtime/: ValdiStandaloneMain.cpp
valdi/test/integration/: Runtime_tests.cpp
valdi/test/runtime/: Tweaks_tests.cpp
valdi_core/src/valdi_core/cpp/Utils/: StaticString.cpp  StaticString.hpp
valdi_core/src/valdi_core/ios/valdi_core/: SCValdiScrollView.m  SCValdiScrollViewInner.h  SCValdiScrollViewInner.m
